--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
